# VIO

./: .Makefile.swp  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  docker-compose.intel.yml  docker-compose.raspberrypi.yml  docker-compose.yml  index.html  mkdocs.yaml  powermetrics_log.txt  sitemap.xml  vio_demo.md
docs/: CICD.md  (+22 more)
edge/: pyproject.toml
edge/camera/: Dockerfile  Makefile  camera_config.yml  edge_camera.yml  pyproject.toml
edge/cockpit/: Makefile  edge_cockpit.yml  index.html  nginx.conf  package.json  vite.config.js
edge/cockpit/src/: App.vue  main.js
edge/model_serving/: .flake8
edge/model_serving/tflite_serving/: Dockerfile  Makefile  README.md  convert_pb_to_tflite.py  edge_model_serving.yml  model.tflite  pyproject.toml
edge/orchestrator/: Makefile  edge_orchestrator.yml  pyproject.toml
edge/orchestrator/config/: data_gathering_with_1_usb_cam.json  marker_classif_with_1_raspberry_cam.json  marker_classif_with_1_usb_cam.json  marker_classif_with_2_fake_cam.json  mobilenet_ssd_v2_coco_with_2_usb_cam.json  pin_detection_with_1_usb_cam.json  pin_detection_with_2_usb_cam.json
edge_camera/: Makefile  pyproject.toml
edge_model_serving/: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  edge_model_serving.yml  index.html  models.config  pyproject.toml
edge_model_serving/onnx_serving/: Dockerfile  avancement.txt  pyproject.toml  requirements.txt
edge_model_serving/onnx_serving/src/: api_routes.py  onnx_interpreter.py  onnx_server.py
edge_model_serving/onnx_serving/tests/: test_onnx_serving.py
edge_model_serving/src/tflite_serving/: __main__.py  tflite_interpreter.py  tflite_server.py
edge_model_serving/tests/: test_torch_serving.py
edge_model_serving/tf_serving/: Dockerfile  Dockerfile.raspberrypi  README.md  models.config
edge_model_serving/tflite_serving/: Dockerfile  Dockerfile.raspberrypi  Makefile  README.md  convert_pb_to_tflite.py  pyproject.toml  requirements-dev.txt  requirements.txt
edge_model_serving/tflite_serving/src/: tflite_server.py
edge_model_serving/tflite_serving/tests/: test_tflite_serving.py
edge_model_serving/torch_serving/: Dockerfile  Makefile  README.md  README.yolo.md  TODO.md  config.properties  model.py  requirements-dev.txt  requirements.txt  torchserve_handler.py
edge_model_serving/torch_serving/src/: fast_serving.py  model.py  modeldetection.py  modelhandler.py  utils.py
edge_model_serving/torch_serving/tests/: conftest.py  test_torch_serving.py  test_torchserve_handler.py
edge_orchestrator/: .env.template  Dockerfile  Dockerfile.raspberrypi  MANIFEST.in  Makefile  README.md  edge_orchestrator.yml  index.html  pip.conf  pyproject.toml  requirements-dev.txt  requirements-raspberrypi.txt  requirements.txt  setup.cfg  setup.py
edge_orchestrator/config/: .active_config.json  active_station_config  active_station_config.json  config_1.json  config_2.json  config_3.json  config_4.json  data_gathering.json  data_gathering_with_1_usb_cam.json  data_gathering_with_2_fake_cam.json  duck_classif_with_1_usb_and_cam_1_raspberry_cam.json  duck_classif_with_2_fake_cam_fake_model.json  duck_detection_gcp_with_2_usbcamera.json  duck_detection_local_with_2_fakecamera.json  duck_detection_local_with_2_usbcamera.json  duck_detection_with_2_fakecamera.json  duck_detection_with_2_usbcamera.json  imagenet_classif_with_1_fake_cam.json  inventory.json  marker_classif_with_1_raspberry_cam.json  marker_classif_with_1_usb_cam.json  marker_classif_with_1_webcam.json  marker_classif_with_2_fake_cam.json  marker_classif_with_2_usb_cam.json  mobilenet_ssd_v2_coco_with_2_usb_cam.json  model_platform_marker_classif_with_2_fake_cam.json  pin_detection_with_1_usb_cam.json  pin_detection_with_2_usb_cam.json  pin_detection_with_2_usbcamera.json
edge_orchestrator/config/other_configs/: cellphone_connection_classification_with_1_fake_camera.json  cellphone_connection_classification_with_1_usb_camera.json  cellphone_detection_and_classification_with_1_fake_camera.json  cellphone_detection_and_classification_with_1_usb_camera.json  person_and_face_detection_with_1_fake_camera.json  person_and_face_detection_with_2_fake_cameras.json  person_and_face_detection_with_2_usb_cameras.json
edge_orchestrator/config/station_configs/: barcode_detection_with_1_fake_camera.json  barcode_detection_with_usbcamera.json  barcode_detection_with_webcam.json  demo_classification_with_1_usbcamera.json  duck_detector_with_2_usbcamera.json  facerec_with_1_fake_camera.json  marker_classification_with_1_fake_camera.json  marker_classification_with_1_picamera.json  marker_classification_with_1_usbcamera.json  marker_classification_with_2_fake_cameras.json  marker_classification_with_upload_camera.json  mobilenet_v3_large_quantized_with_1_fake_camera.json  person_detection_with_1_fake_camera.json  pin_detection_with_1_usbcamera.json  pin_detection_with_2_usbcamera.json  (+10 more)
edge_orchestrator/data/: ols-smart-rack.txt
edge_orchestrator/edge_orchestrator/: __init__.py  __main__.py  api_config.py  constants.py  logger.cfg
edge_orchestrator/emissions/: emissions.csv  emissions_base_40a8698e-fe42-4ba8-9e48-77c42b3f610a.csv  emissions_base_4cfcb6d4-5399-43f2-ab3c-b6c609c5b964.csv  emissions_base_52ace5d2-2f98-407b-9bc1-de6760de12d9.csv  emissions_base_6b72db7c-4eea-43fa-a40b-92ce36150a31.csv  emissions_base_7532222e-78d1-47e4-9d12-816871d9e3cc.csv  emissions_base_88bc450d-d295-419b-9cba-0ff6f7ad6268.csv  emissions_base_a02cd96d-0918-448d-8e21-6cd5408ddde5.csv  emissions_base_b1e52c10-3004-4344-ba6d-569460c08c6c.csv  emissions_base_b398dcc9-334b-41d2-a3af-cabf191bef13.csv  emissions_base_cf0f571a-8e47-42cd-b88f-f15264817577.csv  emissions_base_d17c9a14-69d7-43d4-a5b8-eb63016744ca.csv  emissions_base_e4d90bd7-9eed-465f-9d6d-c377a162a63f.csv  emissions_base_ec512be2-c43a-4250-93ca-4fc2f0319a91.csv  read_emissions.py
edge_orchestrator/tests/: conftest.py  tests_pyramid.py  tf_serving_container.py
hub_labelizer/: .flake8  Dockerfile  Makefile  pyproject.toml
hub_labelizer/hub_labelizer/: .env  __init__.py  __main__.py  api_config.py  requirements.txt
(+994 files in other folders)
