# VIO Edge — uv workspace root (dev only, not a published package).
#
# Install (dev):  cd edge && uv sync
# Run tests:      uv run pytest orchestrator/tests/unit_tests/
#                 uv run pytest camera/tests/unit_tests/
#
# Each sub-package is independently installable on target devices:
#   pip install edge-orchestrator
#   pip install edge-orchestrator[mqtt]
#   pip install edge-camera[pi]
#   pip install edge-camera[usb]
#   pip install edge-camera[basler]
#   pip install edge-model-server
#   pip install edge-storage[s3]

[project]
name = "vio-edge-workspace"
version = "0.1.0"
# Python 3.11: matches Raspberry Pi OS, Jetson, and the current dev environment.
requires-python = ">=3.11,<3.12"
dependencies = [
    "edge-orchestrator",
    "edge-camera",
]

[tool.uv.sources]
edge-orchestrator = { workspace = true }
edge-camera = { workspace = true }

[tool.uv.workspace]
members = [
    "orchestrator",
    "camera",
]

[tool.uv]
# Limit lockfile to dev environments — Pi (aarch64) and Basler deploy via pip install directly.
environments = [
    "sys_platform == 'darwin'",
]
no-build-package = ["python-prctl", "pypylon"]

[dependency-groups]
dev = [
    "autoflake==2.3.1",
    "behave==1.3.3",
    "black==24.10.0",
    "flake8==7.1.1",
    "isort==5.13.2",
    "numpy>=1.24.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==5.0.0",
    "testcontainers==4.9.1",
    "httpx==0.28.1",
]
