[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tflite_serving"
version = "1.0.0"
dependencies = [
    "ai-edge-litert==1.1.2",
    "anyio==4.8.0",
    "fastapi==0.115.11",
    "httpx==0.28.1",
    "numpy~=1.26",
    "pillow==11.1.0",
    "uvicorn==0.34.0",
]
requires-python = ">=3.10"

[project.scripts]
edge_model_serving = "tflite_serving.__main__:run_for_debug"

[project.optional-dependencies]
dev = [
    "autoflake==2.3.1",
    "black==25.1.0",
    "flake8==7.1.1",
    "isort==6.0.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "requests==2.32.3",
]

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["tests*", "data"]

[tool.pytest.ini_options]
min_version = "6.0"
testpaths = "tests/"

[tool.flake8]
exclude = "venv*"
max-complexity = 10
max-line-length = 120


[tool.isort]
profile = "black"
