[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edge_orchestrator"
dynamic = ["readme"]
version = "1.0.0"
authors = [
    { name = "BAPO", email = "bapo@octo.com" },
    { name = "GIRE", email = "gire@octo.com" },
    { name = "KSA", email = "ksa@octo.com" },
    { name = "ROLO", email = "rolo@octo.com" },
    { name = "THAN", email = "than@octo.com" },
    { name = "YDR", email = "ydr@octo.com" },
]
description = 'vio-edge: orchestrator module'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache2.0',
    'Operating System :: OS Independent',
]
dependencies = [
    "aiohttp==3.11.11",
    "fastapi[all]==0.115.6",
    "numpy==2.2.2",
    "opencv_python==4.11.0.86",
    "Pillow==11.1.0",
    "smart-open[all]==7.1.0",
    "tenacity==9.0.0",
]
requires-python = ">=3.10"


[project.optional-dependencies]
dev = [
    "autoflake==2.3.1",
    "behave @ git+https://github.com/behave/behave@v1.2.7.dev3#egg=behave[toml]",
    "black==24.10.0",
    "flake8==7.1.1",
    "isort==5.13.2",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==5.0.0",
    "testcontainers==4.9.1",
]
raspberry = ["picamera2==0.3.25"]

[project.scripts]
edge_orchestrator = "edge_orchestrator.__main__:run_for_debug"

[project.urls]
homepage = "https://github.com/octo-technology/VIO"
documentation = "https://octo-technology.github.io/VIO/"
changelog = "https://github.com/octo-technology/VIO/compare/"

[tool.behave]
junit = true
junit_directory = "reports/behave/"
logging_clear_handlers = true
paths = ["tests/functional_tests"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
verbose = true

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
readme = { file = ["README.rst", "USAGE.rst"] }

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["tests*", "data"]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
norecursedirs = [".git", "venv/", ".pytest_cache/"]
