[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-camera"
version = "1.0.0"
description = "VIO edge camera service — standalone HTTP capture service"
requires-python = ">=3.9"
dependencies = [
    "fastapi[all]==0.115.6",
    "Pillow>=9.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pi     = ["picamera2==0.3.25; sys_platform == 'linux'"]
usb    = ["opencv-python-headless>=4.8.0"]
basler = ["pypylon==4.0.0"]
dev = [
    "ruff>=0.9.0",
    "numpy>=1.24.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==5.0.0",
    "httpx==0.28.1",
]

[project.scripts]
edge_camera = "edge_camera.__main__:run"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
norecursedirs = [".git", "venv/", ".pytest_cache/"]

[tool.behave]
junit = true
junit_directory = "reports/behave/"
paths = ["tests/functional_tests"]
