[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-orchestrator"
dynamic = ["readme"]
version = "1.0.0"
authors = [
    { name = "BAPO", email = "bapo@octo.com" },
    { name = "GIRE", email = "gire@octo.com" },
    { name = "KSA", email = "ksa@octo.com" },
    { name = "ROLO", email = "rolo@octo.com" },
    { name = "THAN", email = "than@octo.com" },
    { name = "YDR", email = "ydr@octo.com" },
]
description = 'vio-edge: orchestrator module'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache2.0',
    'Operating System :: OS Independent',
]
dependencies = [
    "aiohttp==3.11.11",
    "httpx>=0.27.0",
    "aiosqlite==0.21.0",
    "fastapi[all]==0.115.6",
    "numpy>=1.24.2,<2",
    "opencv_python==4.11.0.86",
    "Pillow>=9.4.0",
    "smart-open[all]==7.1.0",
    "tenacity==9.0.0",
]
requires-python = ">=3.9"


[project.optional-dependencies]
mqtt  = ["aiomqtt>=2.0.0"]
opcua = ["asyncua>=1.0.0"]
grpc  = ["grpcio>=1.60.0"]
dev = [
    "ruff>=0.9.0",
    "behave==1.3.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==5.0.0",
    "testcontainers==4.9.1",
]

[project.scripts]
edge_orchestrator = "edge_orchestrator.__main__:run_for_debug"

[project.urls]
homepage = "https://github.com/octo-technology/VIO"
documentation = "https://octo-technology.github.io/VIO/"
changelog = "https://github.com/octo-technology/VIO/compare/"

[tool.behave]
junit = true
junit_directory = "reports/behave/"
logging_clear_handlers = true
paths = ["tests/functional_tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.dynamic]
readme = { file = ["README.rst", "USAGE.rst"] }

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["tests*", "data"]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
norecursedirs = [".git", "venv/", ".pytest_cache/"]
