[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tflite_serving"
version = "1.0.0"
dependencies = [
    "fastapi==0.80.0",
    "numpy==1.22",
    "Pillow==8.4.0",
    "uvicorn==0.22.0",
    "anyio==3.7.1"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src/"]

#[tool.setuptools_scm]
#root = "../.."
#write_to = "edge_model_serving/tflite_serving/src/tflite_serving/_version.py"

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "autoflake==2.3.1",
    "pytest==7.2.2",
    "pytest-cov==4.0.0",
    "requests==2.26.0"
]
# TensorFlow Lite supported platforms: https://www.tensorflow.org/lite/guide/python#supported_platforms
linux = [
    "tflite-runtime==2.7.0"
]

# macos refer to https://www.tensorflow.org/lite/guide/build_cmake_pip

[tool.pytest.ini_options]
min_version = "6.0"
testpaths = "tests/"

[tool.flake8]
exclude = "venv*"
max-complexity = 10
max-line-length = 120


[tool.isort]
profile = "black"
