[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-model-server"
version = "1.0.0"
dependencies = [
    "ai-edge-litert==1.1.0",
    "anyio==3.7.1",
    "fastapi==0.80.0",
    "httpx==0.28.1",
    "numpy~=1.26",
    "pillow==11.1.0",
    "setuptools==75.8.0",
    "uvicorn==0.34.0",
]
requires-python = ">=3.10"

[project.scripts]
edge_model_serving = "tflite_serving.__main__:run_for_debug"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "requests==2.32.3",
]

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["tests*", "data"]

[tool.pytest.ini_options]
min_version = "6.0"
testpaths = "tests/"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
